--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -178,6 +178,12 @@
 \newcommand{\KNIMENODE}[1]{\texttt{#1}}
 \newcommand{\OPENMSTOOL}[1]{\texttt{#1}}
 
+\usepackage{etoolbox} % simplified if / else checks in latex
+
+% define that this tutorial is based on a prerelease of OpenMS (will output some additional notes)
+\newtoggle{isprerelease}
+\toggletrue{isprerelease}
+
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -191,8 +197,8 @@
 
 \begin{itemize}
 \item This handout will guide you through an introductory tutorial for the OpenMS/TOPP software package~\cite{OpenMS}.
-\item OpenMS~\cite{Sturm2008} is a versatile open-source library for mass spectrometry data analysis. Based on this library, we offer a collection
-      of command-line tools ready to be used by end users. These so-called TOPP tools (short for ``The OpenMS Proteomics Pipeline'')~\cite{Kohlbacher2007} can be understood as
+\item OpenMS~\cite{Sturm2008,rost2016openms} is a versatile open-source library for mass spectrometry data analysis. Based on this library, we offer a collection
+      of command-line tools ready to be used by end users. These so-called TOPP tools (short for ''The OpenMS Proteomics Pipeline'')~\cite{Kohlbacher2007} can be understood as
       small building blocks of arbitrary complex data analysis workflows.
 \item In order to facilitate workflow construction, OpenMS was integrated into KNIME~\cite{KNIME}, the Konstanz
 			Information Miner, an open-source integration platform providing a powerful and flexible workflow system
@@ -200,14 +206,13 @@
 			results of data processing using TOPP can be visualized using TOPPView~\cite{Sturm2009}.
 \item This tutorial was designed for use in a hands-on tutorial session but can also be worked through at home using the online resources. You will become familiar with some of the basic functionalities of OpenMS/TOPP, TOPPView, and KNIME
       and learn how to use a selection of TOPP tools used in the tutorial workflows.
-\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or online on our \hyperlink{https://sourceforge.net/p/open-ms/code/HEAD/tree/Tutorials/UM_2015/Example_Data/}{SourceForge}).
-%\item Installation packages of the new OpenMS 1.11 release for Windows (32 and 64 bit) and Mac OS X (10.7 and 10.8) as well as
-%      all data required for this tutorial session can be found on the USB sticks provided by us.
+\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or released online on our github page
+\hyperlink{https://github.com/OpenMS/Tutorials/releases}{OpenMS/Tutorials}).
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
-\include{handout_content}
+\include{gettingstarted}
 
 \include{labelfree}
 
@@ -222,8 +227,6 @@
 \include{qualitycontrol}
 
 \include{troubleshooting}
-
-%\include{pyopenms}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
